# epic-report-generator

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
src/epic_report_generator/: __init__.py  __main__.py  app.py  desktop.py  resources_util.py
src/epic_report_generator/core/: __init__.py  chart_generator.py  data_models.py  jira_client.py  metrics.py  pdf_generator.py
src/epic_report_generator/resources/: epic-report-generator.desktop
src/epic_report_generator/services/: __init__.py  auth_manager.py  config_manager.py  oauth_server.py
src/epic_report_generator/ui/: __init__.py  config_panel.py  log_panel.py  login_panel.py  main_window.py  preview_panel.py  report_panel.py  settings_panel.py  styles.py  widgets.py
tests/: test_auth_manager.py  test_chart_generator.py  test_config_manager.py  test_data_models.py  test_jira_client.py  test_metrics.py  test_oauth_server.py  test_pdf_generator.py
